Image Path managed

--- a/Index.html
+++ b/Index.html
@@ -60,22 +60,22 @@
                 </div>
                 <div class="habit_item d-flex">
                     <div>
-                        <img src="/assets/images/movement.png" alt="">
+                        <img src="./assets/images/movement.png" alt="">
                         <h6>Movement</h6>
                         <p>We believe fitness should be accessible to everyone</p>
                     </div>
                     <div>
-                        <img src="/assets/images/time.png" alt="">
+                        <img src="./assets/images/time.png" alt="">
                         <h6>Time</h6>
                         <p>We believe fitness should be accessible to everyone</p>
                     </div>
                     <div>
-                        <img src="/assets/images/practice.png" alt="">
+                        <img src="./assets/images/practice.png" alt="">
                         <h6>Practice</h6>
                         <p>We believe fitness should be accessible to everyone</p>
                     </div>
                     <div>
-                        <img src="/assets/images/weight.png" alt="">
+                        <img src="./assets/images/weight.png" alt="">
                         <h6>Weight Loss</h6>
                         <p>We believe fitness should be accessible to everyone</p>
                     </div>
@@ -91,7 +91,7 @@
                     <button class="primaryBtn">Join Club Now!</button>
                 </div>
                 <div>
-                    <img src="/assets//images//miles.png" alt="">
+                    <img src="./assets//images//miles.png" alt="">
                 </div>
             </div>
         </section>
