--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
                 <section class="banner d-flex">
                     <div class="left">
-                        <h1>Get body in<br> <span class="miama_text">shape</span> & stay <br>healthy</h1>
+                        <h1 class="headline">Get body in<br> <span class="miama_text">shape</span> & stay <br>healthy</h1>
                         <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
                         <button class="primaryBtn">Join Club Now!</button> <button class="secondaryBtn">Download Now</button>
                     </div>
